Simple chat room
This is the base of the game. It's gonna be online yee

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,1 +1,13 @@
-list=[]
+list=Array[Dictionary]([{
+"base": &"Control",
+"class": &"Chatroom",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Chatroom.gd"
+}, {
+"base": &"Control",
+"class": &"OnlineMenu",
+"icon": "",
+"language": &"GDScript",
+"path": "res://OnlineMenu.gd"
+}])
