Turns for players

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,129 @@ export_presets.cfg
 data_*/
 
 .vscode/
+
+Stolen Card Sprites/
+.godot/imported/yellow_skip_large.png-71a60e27a5f9e8361f5302bc6faa27da.md5
+.godot/imported/yellow_skip_large.png-71a60e27a5f9e8361f5302bc6faa27da.ctex
+.godot/imported/yellow_reverse_large.png-0c4bdba2495871f2c88ded531faa15c1.md5
+.godot/imported/yellow_reverse_large.png-0c4bdba2495871f2c88ded531faa15c1.ctex
+.godot/imported/yellow_picker_large.png-99dcee4167ea12d3685752a8c647cf65.md5
+.godot/imported/yellow_picker_large.png-99dcee4167ea12d3685752a8c647cf65.ctex
+.godot/imported/yellow_9_large.png-e7fafed50d6a3bc73bace0f0c243b132.md5
+.godot/imported/yellow_9_large.png-e7fafed50d6a3bc73bace0f0c243b132.ctex
+.godot/imported/yellow_8_large.png-55e375e484f1c8e6c863ec1a81b0b115.md5
+.godot/imported/yellow_8_large.png-55e375e484f1c8e6c863ec1a81b0b115.ctex
+.godot/imported/yellow_7_large.png-b9947445bc421d57626ee7e8a96a843e.md5
+.godot/imported/yellow_7_large.png-b9947445bc421d57626ee7e8a96a843e.ctex
+.godot/imported/yellow_6_large.png-eca22353c0212f18025fe03e9a7324ab.md5
+.godot/imported/yellow_6_large.png-eca22353c0212f18025fe03e9a7324ab.ctex
+.godot/imported/yellow_5_large.png-c9ce9857a8fc200028c2f1de92438963.md5
+.godot/imported/yellow_5_large.png-c9ce9857a8fc200028c2f1de92438963.ctex
+.godot/imported/yellow_4_large.png-9a025f2ff1dd2087b338b9152de18095.md5
+.godot/imported/yellow_4_large.png-9a025f2ff1dd2087b338b9152de18095.ctex
+.godot/imported/yellow_3_large.png-811c25ed7fcd79a75d3b5c70df7433e8.md5
+.godot/imported/yellow_3_large.png-811c25ed7fcd79a75d3b5c70df7433e8.ctex
+.godot/imported/yellow_2_large.png-1d49482c614d74a257ea659f4bab862e.md5
+.godot/imported/yellow_2_large.png-1d49482c614d74a257ea659f4bab862e.ctex
+.godot/imported/yellow_1_large.png-3b60727e5d9a2889b520de7968acffff.md5
+.godot/imported/yellow_1_large.png-3b60727e5d9a2889b520de7968acffff.ctex
+.godot/imported/yellow_0_large.png-4c09ed479ce089d45ebf92c069f1b11f.md5
+.godot/imported/yellow_0_large.png-4c09ed479ce089d45ebf92c069f1b11f.ctex
+.godot/imported/wild_pick_four_large.png-a579adf024b2ac24d46f2dceeb6fd6e1.md5
+.godot/imported/wild_pick_four_large.png-a579adf024b2ac24d46f2dceeb6fd6e1.ctex
+.godot/imported/wild_colora_changer_large.png-bbadb57ead48b20b0ba7cc7454afcdaa.md5
+.godot/imported/wild_colora_changer_large.png-bbadb57ead48b20b0ba7cc7454afcdaa.ctex
+.godot/imported/Screenshot 2023-09-30 001200.png-805429810694f2f092b04985f31c7895.md5
+.godot/imported/Screenshot 2023-09-30 001200.png-805429810694f2f092b04985f31c7895.ctex
+.godot/imported/Screenshot 2023-09-29 232330.png-11033fd7f0ac8629b9ae46f7cacf4a8d.md5
+.godot/imported/Screenshot 2023-09-29 232330.png-11033fd7f0ac8629b9ae46f7cacf4a8d.ctex
+.godot/imported/Screenshot 2023-09-29 232132.png-190334fa011d24ebb3928b1ab51ba98f.md5
+.godot/imported/Screenshot 2023-09-29 232132.png-190334fa011d24ebb3928b1ab51ba98f.ctex
+.godot/imported/Screenshot 2023-09-29 231808.png-4872cf6f12ac0fc852ab667770787181.md5
+.godot/imported/Screenshot 2023-09-29 231808.png-4872cf6f12ac0fc852ab667770787181.ctex
+.godot/imported/Screenshot 2023-09-29 231159.png-5a85acd13f26a2a6e30b15fd172263f2.md5
+.godot/imported/Screenshot 2023-09-29 231159.png-5a85acd13f26a2a6e30b15fd172263f2.ctex
+.godot/imported/Screenshot 2023-09-29 231059.png-03cabb0a1f9e20c7869a5d0a52b002b3.md5
+.godot/imported/Screenshot 2023-09-29 231059.png-03cabb0a1f9e20c7869a5d0a52b002b3.ctex
+.godot/imported/red_skip_large.png-f80d835f5c5f7948dc9624a309a84216.md5
+.godot/imported/red_skip_large.png-f80d835f5c5f7948dc9624a309a84216.ctex
+.godot/imported/red_reverse_large.png-4cf74ad015d6b34633b0d09309a6ec46.md5
+.godot/imported/red_reverse_large.png-4cf74ad015d6b34633b0d09309a6ec46.ctex
+.godot/imported/red_picker_large.png-bcca389ae73039a62508c8e2471d1543.md5
+.godot/imported/red_picker_large.png-bcca389ae73039a62508c8e2471d1543.ctex
+.godot/imported/red_9_large.png-50fa14cb09e81e4bad16220b732bd982.md5
+.godot/imported/red_9_large.png-50fa14cb09e81e4bad16220b732bd982.ctex
+.godot/imported/red_8_large.png-1c4a976517d56b941b8cc9a855667d49.md5
+.godot/imported/red_8_large.png-1c4a976517d56b941b8cc9a855667d49.ctex
+.godot/imported/red_7_large.png-9a61c8ad2e07fd720dfb126d49f0b142.md5
+.godot/imported/red_7_large.png-9a61c8ad2e07fd720dfb126d49f0b142.ctex
+.godot/imported/red_6_large.png-c74c85fe844f226c9d83e5f3672083a6.md5
+.godot/imported/red_6_large.png-c74c85fe844f226c9d83e5f3672083a6.ctex
+.godot/imported/red_5_large.png-cf9ac503d771044fb59c4c0022117119.md5
+.godot/imported/red_5_large.png-cf9ac503d771044fb59c4c0022117119.ctex
+.godot/imported/red_4_large.png-ce9051a611ef164862afb39c7c949b55.md5
+.godot/imported/red_4_large.png-ce9051a611ef164862afb39c7c949b55.ctex
+.godot/imported/red_3_large.png-2d66d2fd9535ee262dc46aa76965918a.md5
+.godot/imported/red_3_large.png-2d66d2fd9535ee262dc46aa76965918a.ctex
+.godot/imported/red_2_large.png-4b334e951cb292cf5600ed12a5ff28c1.md5
+.godot/imported/red_2_large.png-4b334e951cb292cf5600ed12a5ff28c1.ctex
+.godot/imported/red_1_large.png-bf4f2a30bb69541347056a6d2ffd413f.md5
+.godot/imported/red_1_large.png-bf4f2a30bb69541347056a6d2ffd413f.ctex
+.godot/imported/red_0_large.png-f4730017743dba419c251c0891ae7960.md5
+.godot/imported/red_0_large.png-f4730017743dba419c251c0891ae7960.ctex
+.godot/imported/green_skip_large.png-e10c92b48d4f7ccc53275379f3356792.md5
+.godot/imported/green_skip_large.png-e10c92b48d4f7ccc53275379f3356792.ctex
+.godot/imported/green_reverse_large.png-83d2a76b0410514adc04758466323643.md5
+.godot/imported/green_reverse_large.png-83d2a76b0410514adc04758466323643.ctex
+.godot/imported/green_picker_large.png-3eb2bebb5d8a79d92323683b11c3258e.md5
+.godot/imported/green_picker_large.png-3eb2bebb5d8a79d92323683b11c3258e.ctex
+.godot/imported/green_9_large.png-88889bf70fda373f45679eb41d2ad4c0.md5
+.godot/imported/green_9_large.png-88889bf70fda373f45679eb41d2ad4c0.ctex
+.godot/imported/green_8_large.png-664310772b0939822118766e379cdf9f.md5
+.godot/imported/green_8_large.png-664310772b0939822118766e379cdf9f.ctex
+.godot/imported/green_7_large.png-6a8c5fc98b946b81d566cc2babb60ab4.md5
+.godot/imported/green_7_large.png-6a8c5fc98b946b81d566cc2babb60ab4.ctex
+.godot/imported/green_6_large.png-8ff92a7ae9adbffb0f3b4b9d9424f393.md5
+.godot/imported/green_6_large.png-8ff92a7ae9adbffb0f3b4b9d9424f393.ctex
+.godot/imported/green_5_large.png-ed2d511d75fcff3d751d47bee7b1bbc0.md5
+.godot/imported/green_5_large.png-ed2d511d75fcff3d751d47bee7b1bbc0.ctex
+.godot/imported/green_4_large.png-5c1c09193d7033ee0f368d7812fa3309.md5
+.godot/imported/green_4_large.png-5c1c09193d7033ee0f368d7812fa3309.ctex
+.godot/imported/green_3_large.png-a34998ba43542422ffad7a102eb67c10.md5
+.godot/imported/green_3_large.png-a34998ba43542422ffad7a102eb67c10.ctex
+.godot/imported/green_2_large.png-3f3288dcf9d47561e853c06aa92d72de.md5
+.godot/imported/green_2_large.png-3f3288dcf9d47561e853c06aa92d72de.ctex
+.godot/imported/green_1_large.png-bf7aced37c21cc20c97121dbbac939e2.md5
+.godot/imported/green_1_large.png-bf7aced37c21cc20c97121dbbac939e2.ctex
+.godot/imported/green_0_large.png-8bcf256eb48e489ac05a4ef00f2c4959.md5
+.godot/imported/green_0_large.png-8bcf256eb48e489ac05a4ef00f2c4959.ctex
+.godot/imported/card_back_large.png-4be0609c9ab8d8141fec516e9dc7e744.md5
+.godot/imported/card_back_large.png-4be0609c9ab8d8141fec516e9dc7e744.ctex
+.godot/imported/card_back_alt_large.png-871358af557924ae9ee312bdf792c1ca.md5
+.godot/imported/card_back_alt_large.png-871358af557924ae9ee312bdf792c1ca.ctex
+.godot/imported/blue_skip_large.png-a115748db76b4730846ce5a84bc543f9.md5
+.godot/imported/blue_skip_large.png-a115748db76b4730846ce5a84bc543f9.ctex
+.godot/imported/blue_reverse_large.png-d93fc81c9ce18f230d27465dcc4eaadb.md5
+.godot/imported/blue_reverse_large.png-d93fc81c9ce18f230d27465dcc4eaadb.ctex
+.godot/imported/blue_picker_large.png-e91ff9068a8465c5033e6bc3d78d9bb1.md5
+.godot/imported/blue_picker_large.png-e91ff9068a8465c5033e6bc3d78d9bb1.ctex
+.godot/imported/blue_9_large.png-189e5e5a4226600bc8843e4b41583560.md5
+.godot/imported/blue_9_large.png-189e5e5a4226600bc8843e4b41583560.ctex
+.godot/imported/blue_8_large.png-404980a2356e95d616feb84c413cc3f6.md5
+.godot/imported/blue_8_large.png-404980a2356e95d616feb84c413cc3f6.ctex
+.godot/imported/blue_7_large.png-b223f55ad1b8704d9922310e9e722f5d.md5
+.godot/imported/blue_7_large.png-b223f55ad1b8704d9922310e9e722f5d.ctex
+.godot/imported/blue_6_large.png-06f8774d614be906122c148a37efd236.md5
+.godot/imported/blue_6_large.png-06f8774d614be906122c148a37efd236.ctex
+.godot/imported/blue_5_large.png-616cd63dcc2cefcff25236754446a419.md5
+.godot/imported/blue_5_large.png-616cd63dcc2cefcff25236754446a419.ctex
+.godot/imported/blue_4_large.png-4f0960beb065cea9335287b9d9e05a95.md5
+.godot/imported/blue_4_large.png-4f0960beb065cea9335287b9d9e05a95.ctex
+.godot/imported/blue_3_large.png-1f51386d77d8fe3da4aef07a5b3dce33.md5
+.godot/imported/blue_3_large.png-1f51386d77d8fe3da4aef07a5b3dce33.ctex
+.godot/imported/blue_2_large.png-45348cfe44dcef78f8250265ff15849b.md5
+.godot/imported/blue_2_large.png-45348cfe44dcef78f8250265ff15849b.ctex
+.godot/imported/blue_1_large.png-e53bb805b282aa0895473933ff2427d3.md5
+.godot/imported/blue_1_large.png-e53bb805b282aa0895473933ff2427d3.ctex
+.godot/imported/blue_0_large.png-6273736dfb1e5d4bbc1e92ce35ef0784.md5
+.godot/imported/blue_0_large.png-6273736dfb1e5d4bbc1e92ce35ef0784.ctex
