--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,13 +1,43 @@
 list=Array[Dictionary]([{
+"base": &"Node",
+"class": &"CardFactory",
+"icon": "",
+"language": &"GDScript",
+"path": "res://CardFactory.gd"
+}, {
 "base": &"Control",
 "class": &"Chatroom",
 "icon": "",
 "language": &"GDScript",
 "path": "res://Chatroom.gd"
 }, {
+"base": &"Node2D",
+"class": &"DrawPile",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Ingame/DrawPile.gd"
+}, {
+"base": &"Node",
+"class": &"MatchEventListener",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Ingame/MatchEventListener.gd"
+}, {
+"base": &"Node",
+"class": &"MatchStateMachine",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Ingame/MatchStateMachine.gd"
+}, {
 "base": &"Control",
 "class": &"OnlineMenu",
 "icon": "",
 "language": &"GDScript",
 "path": "res://OnlineMenu.gd"
+}, {
+"base": &"Node2D",
+"class": &"PlayedPile",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Ingame/PlayedPile.gd"
 }])
