--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -16,11 +16,11 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://OnlineMenu.tscn", "res://Chatroom.tscn"]
+open_scenes=["res://OnlineMenu.tscn", "res://Chatroom.tscn", "res://Ingame/MatchIngame.tscn"]
 
 [ScriptEditor]
 
-open_scripts=["res://Chatroom.gd", "res://Global/Network.gd"]
+open_scripts=["res://Ingame/MatchEventListener.gd", "res://Ingame/MatchIngame.gd"]
 open_help=[]
 script_split_offset=70
 list_split_offset=0
