Basic card play works

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -20,7 +20,7 @@ open_scenes=["res://OnlineMenu.tscn", "res://Chatroom.tscn", "res://Ingame/Match
 
 [ScriptEditor]
 
-open_scripts=["res://CardFactory.gd", "res://Ingame/DrawPile.gd", "res://Ingame/MatchEventListener.gd"]
+open_scripts=["res://Ingame/MatchEventListener.gd", "res://Ingame/PlayedPile.gd"]
 open_help=[]
 script_split_offset=70
 list_split_offset=0
