--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -48,8 +48,8 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 77,
-"scroll_position": 77.0,
+"row": 105,
+"scroll_position": 105.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -78,6 +78,20 @@ state={
 "h_scroll_position": 0,
 "row": 28,
 "scroll_position": 28.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Ingame/PlayedPile.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 6,
+"scroll_position": 6.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
